--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -161,17 +161,17 @@
         }
 
         // Dropdown menu for desktop view
-        .dropdown-menu {
-            background-color: rgba($color: #000000, $alpha: 0.1);
-        }
+        // .dropdown-menu {
+        //     background-color: rgba($color: #000000, $alpha: 0.1);
+        // }
     
         .dropdown-menu .dropdown-item {
-            background-color: rgba($color: #000000, $alpha: 0.1);
+            background-color: rgba($color: #000000, $alpha: 0.6);
             color: #ffffff;
         }
     
         .dropdown-menu .dropdown-item:hover {
-            background-color: rgba(255, 255, 255, 0.5);
+            background-color: rgba(255, 255, 255, 0.85);
             color: #fff;
         }
     }
